# vole-zk-prover

./: .gitignore  Cargo.toml  LICENSE  README.md  funding.json
benches/: benchmark.rs
src/: actors.rs  format.rs  lib.rs  utils.rs  xyz.rs
src/challenges/: mod.rs
src/circom/: mod.rs  r1cs.rs  witness.rs
src/circom/examples/: gen-test-r1cs-and-wtns.sh  input.json  package-lock.json  package.json  test.circom  test.r1cs  test.sym  witness.wtns
src/codeparams/: mod.rs
src/smallvole/: mod.rs
src/subspacevole/: mod.rs
src/vecccom/: mod.rs
src/vith/: mod.rs
src/zkp/: mod.rs
