[package]
name = "volonym"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
blake3 = "1.5.0"
ff = { version = "0.13", features = ["derive"] }
lazy_static = "1.4.0"
num-bigint = "0.4.4"
ocelot = { path = "./swanky/ocelot" }
rand = "0.8.5"
scuttlebutt = { path = "./swanky/scuttlebutt" }
sha2 = "0.10.8"

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }

[[bench]]
name = "benchmark"
harness = false
