[package]
name = "volonym"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
blake3 = "1.5.0"
ff = { version = "0.13", features = ["derive"] }
itertools = "0.11.0"
lazy_static = "1.4.0"
nalgebra = "0.32.3"
ndarray = "0.15.6"
nshare = "0.9.0"
num-bigint = "0.4.4"
num-traits = "0.2.17"
polynomen = "1.1.0"
# polynomial = "0.2.6"
rand = "0.8.5"
# scuttlebutt = { path = "./swanky/scuttlebutt" }

[dev-dependencies]
criterion = { version = "0.4", default-features = false }

[[bench]]
name = "benchmark"
harness = false
